# thai-lipread

./: .gitignore  LICENSE  README.md
_prepvec/: .coveragerc  README.rst  setup.cfg  setup.py
_prepvec/docs/: conf.py
_prepvec/tests/: test_skeleton.py
classifier/: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
classifier/docs/: Makefile  conf.py  index.rst
classifier/tests/: conftest.py  hmm01.py  test_skeleton.py
data/vec/: v1.json  v2.json  v3.mp4.json  v5.mp4.json  v6.mp4.json
docs/: README.md
lfa/: .coveragerc  README.md  README.rst  setup.cfg  setup.py
lfa/docs/: conf.py  index.rst
lfa/src/lfa/: __init__.py  (+3 more)
lfa/tests/: conftest.py  test_skeleton.py
prepvec/: AUTHORS.rst  LICENSE.txt
prepvec/docs/: index.rst
prepvec/tests/: conftest.py
scripts/: 1-run-vid2vec-angsawee.bat  2-run-lfa-angsawee.bat  rename.bat  rename.py  run-chayapol.bat  run.py  run.sh
src/: main.cpp
tests/c++/src/: CMakeLists.txt  README.md
unsorted/: teeth.py
unsorted/tlr/: teeth.py
vec2viz/: .coveragerc  README.rst  setup.cfg  setup.py
vec2viz/docs/: Makefile  conf.py  index.rst
vec2viz/tests/: conftest.py  test_skeleton.py
vid2vec/: .coveragerc  .gitignore  README.md  README.rst  env.txt  requirements.txt  setup.cfg  setup.py  v1.mp4.json  v2.mp4.json  v3.mp4.json  v5.mp4.json  v6.mp4.json
vid2vec/docs/: Makefile  conf.py  index.rst
vid2vec/tests/: conftest.py  draw_from_co_str.py  fa_3d.py  print_same_place.py  sample-face-features.json  test_skeleton.py  webcam-fa.py
vv/: index.html  main.css
www/: index.html  main.css
(+31 files in other folders)
